# libres

./: meson.build  meson_options.txt
src/res/: config.vapi  meson.build
